@@ -29,6 +29,8 @@ Version 1.2.1+svn:
  * user interface:
     * smarter focus handling when user input is irrelevant to the current focus
       but relevant to another widget
+    * menus can now stay scrolled to the bottom if they were already scrolled
+      to the bottom
  * WML engine
     * fixed a bug which returned wrong values if a random number was negative
 
